--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,5 +1,5 @@
 <h1>Hello</h1>
-table class="table">
+<table class="table">
         <% for(key in user.toJSON() ) { if (user.hasOwnProperty(key)) { %>
         <tr>
           <td><%= key %>:</td>
