--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <!-- Default home page -->
 <link type="text/css" href='http://sailsjs.org/styles/fonts.css' rel='stylesheet'/>
 <style>
@@ -15,6 +16,16 @@ setTimeout(function sunrise () {
         <h1 id="main-title" class="container"><%= __('A brand new app.') %></h1>
         <h3 class="container">You're looking at: <code><%= view.pathFromApp + '.' +view.ext %></code></h3>
     </div>
+    <div>
+        <h1>Signup</h1>
+            <form method="POST" action="/user">
+            <input type="email" name="username">
+            <input type="password" name="password">
+            <input type="submit" value="submit">
+            </form>
+    </div>
+
+
     <div class="main container clearfix">
         <!-- <h1>Getting started</h1>
         <p>Don't worry, we've got your back.</p> -->
