--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -18,7 +18,7 @@ setTimeout(function sunrise () {
     </div>
     <div>
         <h1>Signup</h1>
-            <form method="POST" action="/register">
+            <form method="POST" action="/auth/local">
             <input type="email" name="username">
             <input type="password" name="password">
             <input type="submit" value="submit">
