--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -19,7 +19,7 @@ setTimeout(function sunrise () {
     <div>
         <h1>Signup</h1>
             <form method="POST" action="/auth/local">
-            <input type="email" name="username">
+            <input type="text" name="identifier">
             <input type="password" name="password">
             <input type="submit" value="submit">
             </form>
