--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -18,8 +18,9 @@ setTimeout(function sunrise () {
     </div>
     <div>
         <h1>Signup</h1>
-            <form method="POST" action="/auth/local">
-            <input type="text" name="identifier">
+            <form method="POST" action="/user">
+            <input type="text" name="username">
+            <input type="email" name="email">
             <input type="password" name="password">
             <input type="submit" value="submit">
             </form>
