--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -25,7 +25,13 @@ setTimeout(function sunrise () {
             <input type="submit" value="submit">
             </form>
     </div>
-
+        <h1>Login</h1>
+            <form method="POST" action="/auth/local">
+            <input type="text" name="identifier">
+            <input type="password" name="password">
+            <input type="submit" value="submit">
+            </form>
+    </div>
 
     <div class="main container clearfix">
         <!-- <h1>Getting started</h1>
