--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -18,7 +18,7 @@ setTimeout(function sunrise () {
     </div>
     <div>
         <h1>Signup</h1>
-            <form method="POST" action="/user">
+            <form method="POST" action="/register">
             <input type="text" name="username">
             <input type="email" name="email">
             <input type="password" name="password">
