--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -16,6 +16,13 @@ setTimeout(function sunrise () {
         <h1 id="main-title" class="container"><%= __('A brand new app.') %></h1>
         <h3 class="container">You're looking at: <code><%= view.pathFromApp + '.' +view.ext %></code></h3>
     </div>
+        <div>
+            <a href="/auth/facebook/" class="btn">Facebook</a>
+        </div>
+
+
+
+
     <div>
         <h1>Signup</h1>
             <form method="POST" action="/user">
